@@ -342,6 +342,7 @@ typedef struct
 	zbx_uint64_t	actionid;
 	char		*value;
 	char		*value2;
+	int		condition_result;
 	unsigned char	conditiontype;
 	unsigned char	operator;
 }
